--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jfreehill/yeoman-test"
+    "url": "https://github.com/jfreehill/portfolio"
   },
   "licenses": [
     {
@@ -25,11 +25,5 @@
     "express": "3.3.4",
     "jade": "*",
     "requirejs": "~2.1.8"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-watch": "~0.5.0"
   }
 }
