--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "express": "3.3.4",
     "jade": "*",
-    "requirejs": "~2.1.8"
+    "requirejs": "~2.1.8",
+    "less-middleware": "~0.1.12"
   }
 }
